--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,5 @@
+# pubspec.yaml: 이 파일은 Flutter 프로젝트를 설명하고 애플리케이션의 종속성을 정의합니다.
+
 name: flutter_basic
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
